grammar/CustomLangParser.js
// Generated from CustomLang.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import CustomLangListener from './CustomLangListener.js';
import CustomLangVisitor from './CustomLangVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CustomLangParser extends antlr4.Parser {

    static grammarFileName = "CustomLang.g4";
    static literalNames = [ null, "','", "'('", "')'", "'{'", "'}'", "'+'", 
                            "'-'", "'*'", "'/'" ];
    static symbolicNames = [ null, "COMMA", "LPAREN", "RPAREN", "LCURLY", 
                             "RCURLY", "PLUS", "MINUS", "MUL", "DIV", "INT", 
                             "FLOAT", "ID", "WS" ];
    static ruleNames = [ "program", "def", "call", "expr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CustomLangParser.ruleNames;
        this.literalNames = CustomLangParser.literalNames;
        this.symbolicNames = CustomLangParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 3:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CustomLangParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 11;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 8;
	                this.def(); 
	            }
	            this.state = 13;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 17;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 14;
	            this.call();
	            this.state = 19;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 20;
	        this.match(CustomLangParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CustomLangParser.RULE_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 22;
	        this.match(CustomLangParser.ID);
	        this.state = 23;
	        this.match(CustomLangParser.LCURLY);
	        this.state = 27;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 24;
	            this.call();
	            this.state = 29;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 30;
	        this.match(CustomLangParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	call() {
	    let localctx = new CallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CustomLangParser.RULE_call);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 32;
	        this.match(CustomLangParser.ID);
	        this.state = 33;
	        this.match(CustomLangParser.LPAREN);
	        this.state = 34;
	        localctx.x_offset = this.expr(0);
	        this.state = 35;
	        this.match(CustomLangParser.COMMA);
	        this.state = 36;
	        localctx.y_offset = this.expr(0);
	        this.state = 37;
	        this.match(CustomLangParser.COMMA);
	        this.state = 38;
	        localctx.length = this.expr(0);
	        this.state = 39;
	        this.match(CustomLangParser.COMMA);
	        this.state = 40;
	        localctx.rotation = this.expr(0);
	        this.state = 41;
	        this.match(CustomLangParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 6;
	    this.enterRecursionRule(localctx, 6, CustomLangParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new FloatValContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 45;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7) {
	                this.state = 44;
	                this.match(CustomLangParser.MINUS);
	            }

	            this.state = 47;
	            this.match(CustomLangParser.FLOAT);
	            break;

	        case 2:
	            localctx = new IntValContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7) {
	                this.state = 48;
	                this.match(CustomLangParser.MINUS);
	            }

	            this.state = 51;
	            this.match(CustomLangParser.INT);
	            break;

	        case 3:
	            localctx = new IdValContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 52;
	            this.match(CustomLangParser.ID);
	            break;

	        case 4:
	            localctx = new NestedExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 53;
	            this.match(CustomLangParser.LPAREN);
	            this.state = 54;
	            this.expr(0);
	            this.state = 55;
	            this.match(CustomLangParser.RPAREN);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 65;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new MulExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, CustomLangParser.RULE_expr);
	                    this.state = 59;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 60;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===8 || _la===9)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 61;
	                    this.expr(7);
	                    break;

	                case 2:
	                    localctx = new AddExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, CustomLangParser.RULE_expr);
	                    this.state = 62;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 63;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===6 || _la===7)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 64;
	                    this.expr(6);
	                    break;

	                } 
	            }
	            this.state = 69;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


}

CustomLangParser.EOF = antlr4.Token.EOF;
CustomLangParser.COMMA = 1;
CustomLangParser.LPAREN = 2;
CustomLangParser.RPAREN = 3;
CustomLangParser.LCURLY = 4;
CustomLangParser.RCURLY = 5;
CustomLangParser.PLUS = 6;
CustomLangParser.MINUS = 7;
CustomLangParser.MUL = 8;
CustomLangParser.DIV = 9;
CustomLangParser.INT = 10;
CustomLangParser.FLOAT = 11;
CustomLangParser.ID = 12;
CustomLangParser.WS = 13;

CustomLangParser.RULE_program = 0;
CustomLangParser.RULE_def = 1;
CustomLangParser.RULE_call = 2;
CustomLangParser.RULE_expr = 3;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CustomLangParser.RULE_program;
    }

	EOF() {
	    return this.getToken(CustomLangParser.EOF, 0);
	};

	def = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DefContext);
	    } else {
	        return this.getTypedRuleContext(DefContext,i);
	    }
	};

	call = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CallContext);
	    } else {
	        return this.getTypedRuleContext(CallContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitProgram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CustomLangParser.RULE_def;
    }

	ID() {
	    return this.getToken(CustomLangParser.ID, 0);
	};

	LCURLY() {
	    return this.getToken(CustomLangParser.LCURLY, 0);
	};

	RCURLY() {
	    return this.getToken(CustomLangParser.RCURLY, 0);
	};

	call = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CallContext);
	    } else {
	        return this.getTypedRuleContext(CallContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterDef(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitDef(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitDef(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CallContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CustomLangParser.RULE_call;
        this.x_offset = null;
        this.y_offset = null;
        this.length = null;
        this.rotation = null;
    }

	ID() {
	    return this.getToken(CustomLangParser.ID, 0);
	};

	LPAREN() {
	    return this.getToken(CustomLangParser.LPAREN, 0);
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(CustomLangParser.COMMA);
	    } else {
	        return this.getToken(CustomLangParser.COMMA, i);
	    }
	};


	RPAREN() {
	    return this.getToken(CustomLangParser.RPAREN, 0);
	};

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterCall(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitCall(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitCall(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExprContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CustomLangParser.RULE_expr;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class IdValContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	ID() {
	    return this.getToken(CustomLangParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterIdVal(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitIdVal(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitIdVal(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.IdValContext = IdValContext;

class IntValContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	INT() {
	    return this.getToken(CustomLangParser.INT, 0);
	};

	MINUS() {
	    return this.getToken(CustomLangParser.MINUS, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterIntVal(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitIntVal(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitIntVal(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.IntValContext = IntValContext;

class AddExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.op = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	PLUS() {
	    return this.getToken(CustomLangParser.PLUS, 0);
	};

	MINUS() {
	    return this.getToken(CustomLangParser.MINUS, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterAddExpr(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitAddExpr(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitAddExpr(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.AddExprContext = AddExprContext;

class NestedExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LPAREN() {
	    return this.getToken(CustomLangParser.LPAREN, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	RPAREN() {
	    return this.getToken(CustomLangParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterNestedExpr(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitNestedExpr(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitNestedExpr(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.NestedExprContext = NestedExprContext;

class MulExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.op = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	MUL() {
	    return this.getToken(CustomLangParser.MUL, 0);
	};

	DIV() {
	    return this.getToken(CustomLangParser.DIV, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterMulExpr(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitMulExpr(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitMulExpr(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.MulExprContext = MulExprContext;

class FloatValContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	FLOAT() {
	    return this.getToken(CustomLangParser.FLOAT, 0);
	};

	MINUS() {
	    return this.getToken(CustomLangParser.MINUS, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.enterFloatVal(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CustomLangListener ) {
	        listener.exitFloatVal(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof CustomLangVisitor ) {
	        return visitor.visitFloatVal(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

CustomLangParser.FloatValContext = FloatValContext;


CustomLangParser.ProgramContext = ProgramContext; 
CustomLangParser.DefContext = DefContext; 
CustomLangParser.CallContext = CallContext; 
CustomLangParser.ExprContext = ExprContext; 
